finish first production version of site

--- a/src/style/components/_app.scss
+++ b/src/style/components/_app.scss
@@ -1,37 +1,107 @@
 /** @format */
 
 :root {
-	font-size: calc(12px + (16 - 14) * ((100vw - 400px) / (800 - 400)));
+	font-size: calc(10px + (16 - 14) * ((100vw - 400px) / (800 - 400)));
 }
 
 body {
-	background-color: $gradient-gray;
+	background-image: $gradient-gray;
 	font-family: 'Merriweather Sans', sans-serif;
-	/* 	display: grid;
-	grid-template-columns: 1fr 3fr;
-	grid-template-rows: 1fr;
-	grid-gap: var(--small); */
-	/* min-height: 100vh; */
-	display: flex;
 	line-height: 1.5;
-
+	overflow-x: hidden;
 	margin: 0;
 	padding: 0;
 }
 
-h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
+	font-family: 'Lato', sans-serif;
+	letter-spacing: 0.1rem;
+	font-weight: 300;
+}
+
+h1 {
+	font-family: 'Lato', sans-serif;
+	font-size: 2rem;
+	letter-spacing: 0.1rem;
+	opacity: 0.7;
+}
+
+p {
 	font-family: 'Merriweather', serif;
+	opacity: 0.9;
 }
 
 .content {
-	flex: 3;
-	display: flex;
-	flex-wrap: wrap;
-	align-items: start;
-	margin-right: $large;
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	right: 0;
+	width: 75%;
+	min-height: 100vh;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 50%));
+	grid-template-rows: minmax(min-content, max-content);
+	padding-right: $small;
+	padding-bottom: $small;
+	background-color: $brand-gray;
+	opacity: 1;
+
+	@media #{$tablet} {
+		width: 100%;
+		margin-top: $extraLarge;
+	}
+
+	@media #{$mobile} {
+		grid-template-columns: repeat(auto-fit, minmax(200px, 100%));
+	}
+}
+
+.button {
+	position: relative;
+	padding: $tiny;
+	border-radius: $brand-border-radius;
+	border: 0;
+	outline: 0;
+	transition: $brand-transition;
+	z-index: 1;
+
+	&:hover {
+		cursor: pointer;
+		letter-spacing: 0.1rem;
+		background-color: rgba($secondary-color, 1);
+	}
+
+	&--primary {
+		background-color: rgba($secondary-color, 0.7);
+		color: $brand-white;
+	}
+
+	&--secondary {
+		border: 2px solid rgba($secondary-color, 0.7);
+		color: $secondary-color;
+		background-color: rgba($brand-white, 0);
+
+		&:hover {
+			color: $brand-white;
+		}
+	}
+
+	&--secondary--mc {
+		border: 2px solid rgba($secondary-color, 0.7) !important;
+		color: $secondary-color !important;
+		background-color: rgba($brand-white, 0) !important;
+
+		&:hover {
+			color: $brand-white !important;
+			background-color: rgba($secondary-color, 1) !important;
+		}
+	}
+}
+
+.test {
+	opacity: 0.5;
 }
