--- a/src/style/components/_card.scss
+++ b/src/style/components/_card.scss
@@ -1,36 +1,75 @@
 /** @format */
 
 .card {
-	flex: 1;
-	min-width: 200px;
 	margin: $small 0 0 $small;
-	height: auto;
 	background-image: $gradient-white;
 	box-shadow: $shadow;
-	border-radius: 10px;
+	display: flex;
+	flex-direction: row;
+	align-content: stretch;
+	flex-wrap: wrap;
+	animation: fadeIn 1s ease;
+	position: relative;
+
+	& > * {
+		width: 100%;
+	}
 
 	&__image {
 		width: 100%;
-		border-bottom: 2px solid $primary-color-light;
-		border-top-right-radius: 10px;
-		border-top-left-radius: 10px;
+		margin-bottom: 0;
+		padding-bottom: 0;
+		vertical-align: bottom;
+		transition: $brand-transition;
+
+		&--grayscale {
+			filter: grayscale(100%);
+		}
 	}
 
 	&__text {
+		border-top: 2px solid $primary-color-light;
 		padding: $tiny;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
 
 	&__title {
 		text-align: center;
-		background-color: rgba($primary-color, 0.9);
-		color: $brand-white;
-		padding: 5px;
-		border-radius: 20px;
+		margin-top: 0;
+		margin-bottom: $tiny;
 	}
 
 	&__subtitle {
 		text-align: center;
 		font-style: italic;
 		opacity: 0.5;
+		margin: 0;
+	}
+
+	&__excerpt {
+		margin: 0;
+		opacity: 0.8;
+		margin-bottom: $small;
+	}
+
+	&__button {
+		margin-top: auto;
+		margin-bottom: $tiny;
+	}
+
+	&--featured {
+		grid-column: 1 / -1;
+		grid-row: 1 / 2;
+
+		& > .card__text {
+			@media screen and (min-width: 576px) {
+				position: relative;
+				margin-top: -15rem;
+				background-color: $brand-white;
+				z-index: 1;
+			}
+		}
 	}
 }
