--- a/src/style/components/_page.scss
+++ b/src/style/components/_page.scss
@@ -3,10 +3,25 @@
 .page {
 	padding: $small;
 	width: 100%;
-	min-height: 100vh;
+	grid-column: 1 / -1;
+	animation: fadeIn 1s ease;
 
 	&__image {
 		float: left;
-		margin-right: 16px;
+		margin-right: $small;
+		margin-bottom: $small;
+		max-width: 100%;
+	}
+
+	&__buttons {
+		display: flex;
+		justify-content: center;
+	}
+
+	&__previous,
+	&__next {
+		margin: $tiny;
+		width: 120px;
+		text-align: center;
 	}
 }
