--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,8 +1,12 @@
 /** @format */
 
-@import 'box-sizing';
-@import 'variables';
+@import './global/normalize';
+@import './global/box-sizing';
+@import './global/variables';
+@import './global/animations';
 @import './components/app';
+@import './components/loader';
 @import './components/header';
 @import './components/page';
 @import './components/card';
+@import './pages/contact';
