--- a/src/style/components/_card.scss
+++ b/src/style/components/_card.scss
@@ -16,7 +16,8 @@
 	}
 
 	&__image {
-		width: 100%;
+		max-width: 100%;
+		height: auto;
 		margin-bottom: 0;
 		padding-bottom: 0;
 		vertical-align: bottom;
