--- a/src/style/components/_card.scss
+++ b/src/style/components/_card.scss
@@ -6,7 +6,7 @@
 	box-shadow: $shadow;
 	display: flex;
 	flex-direction: row;
-	align-content: stretch;
+	//align-content: stretch;
 	flex-wrap: wrap;
 	animation: fadeIn 1s ease;
 	position: relative;
