--- a/src/style/components/_card.scss
+++ b/src/style/components/_card.scss
@@ -5,9 +5,7 @@
 	background-image: $gradient-white;
 	box-shadow: $shadow;
 	display: flex;
-	flex-direction: row;
-	//align-content: stretch;
-	flex-wrap: wrap;
+	flex-direction: column;
 	animation: fadeIn 1s ease;
 	position: relative;
 
@@ -34,6 +32,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		height: 100%;
 	}
 
 	&__title {
