--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -40,6 +40,7 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		justify-items: center;
 		padding: $tiny 0 0 0;
 		transition: $brand-transition;
 		border-top: 1px solid rgba($brand-black, 0.2);
