--- a/src/style/pages/_contact.scss
+++ b/src/style/pages/_contact.scss
@@ -8,7 +8,7 @@
 }
 
 .contact--success {
-	background-color: $secondary-color;
+	background-color: $primary-color-light;
 	color: $brand-white;
 	padding: $tiny;
 	animation: fadeIn 1s ease;
