--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,5 +1,6 @@
 /** @format */
 
+@import './global/gutenberg';
 @import './global/normalize';
 @import './global/box-sizing';
 @import './global/variables';
